# building-workflows-with-codex-and-agents-sdk

./: README.md  codex_mcp.py  pyproject.toml
codex_app/: README.md
codex_sdk/: AGENTS_ARCHITECTURE.md  AGENT_TASKS.md  README.md  REQUIREMENTS.md  TEST.md  architecture_flow.mmd  architecture_sequence.mmd  package-lock.json  package.json
codex_sdk/backend/: package.json  server.js
codex_sdk/design/: design_spec.md  wireframe.md
codex_sdk/frontend/: index.html  script.js  styles.css
codex_sdk/prompts/: backend.md  designer.md  frontend.md  project_manager.md  task_list.md  tester.md
codex_sdk/src/: main.ts
codex_sdk/test/: smoke_test.sh  test_plan.md
notebooks/: AGENT_TASKS.md  REQUIREMENTS.md  TEST.md  index.html
notebooks/backend/: server.js
notebooks/design/: design_spec.md
notebooks/frontend/: app.js  index.html  styles.css
notebooks/tests/: TEST_PLAN.md  smoke_tests.sh
prompts/: generate_diagram_multiagent_system.md
samples/: index_1.html  index_2.html
