[project]
name = "codex-sdk-workflows"
version = "0.1.0"
description = "UV configuration for OpenAI SDK workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz>=0.21",
  "loguru>=0.7.3",
  "openai",
  "openai-agents",
  "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
